test/operator/multiply_num_nonnum.lox
1 * "1" // error: Operation not allowed
